feat: Add HEAD API to retrieve the size of the SolutionArchive
Refs: MK8S-63
