# pkg/presentation/http/intern/downloads-openapi.yaml
@@ -41,6 +41,42 @@ paths:
           $ref: "#/components/responses/NotFound"
         "500":
           $ref: "#/components/responses/ServerError"
+    head:
+      summary: Describe the solution archive.
+      operationId: describeSolutionArchive
+      parameters:
+        - name: solutionArchive
+          in: path
+          description: Name of the solution archive
+          required: true
+          schema:
+            type: string
+        - name: version
+          in: path
+          description: Version of the solution archive
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: successful operation
+          headers:
+            Content-Length:
+              description: Size of the requested file in bytes
+              required: true
+              schema:
+                type: integer
+                format: int64
+        "400":
+          $ref: "#/components/responses/BadRequest"
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
+        "404":
+          $ref: "#/components/responses/NotFound"
+        "500":
+          $ref: "#/components/responses/ServerError"
 components:
   responses:
     BadRequest:
