# pkg/presentation/http/resolver/intern_root.go
@@ -16,8 +16,16 @@ type (
 		) (intern.DownloadSolutionArchiveResponseObject, error)
 	}
 
+	HeadSolutionArchive interface {
+		DescribeSolutionArchive(
+			ctx context.Context,
+			request intern.DescribeSolutionArchiveRequestObject,
+		) (intern.DescribeSolutionArchiveResponseObject, error)
+	}
+
 	InternRoot struct {
 		GetSolutionArchive
+		HeadSolutionArchive
 	}
 )
 
@@ -25,9 +33,11 @@ var _ intern.StrictServerInterface = (*InternRoot)(nil)
 
 func NewInternRoot(
 	getSolutionArchive GetSolutionArchive,
+	describeSolutionArchive HeadSolutionArchive,
 ) *InternRoot {
 	return &InternRoot{
-		GetSolutionArchive: getSolutionArchive,
+		GetSolutionArchive:  getSolutionArchive,
+		HeadSolutionArchive: describeSolutionArchive,
 	}
 }
 
@@ -39,6 +49,20 @@ func (r *InternRoot) DownloadSolutionArchive(
 	if err != nil {
 		return nil, errors.Intercept(err).
 			WithDetail("failed to resolve download solution archive request").
+			Throw()
+	}
+
+	return response, nil
+}
+
+func (r *InternRoot) DescribeSolutionArchive(
+	ctx context.Context,
+	request intern.DescribeSolutionArchiveRequestObject,
+) (intern.DescribeSolutionArchiveResponseObject, error) {
+	response, err := r.HeadSolutionArchive.DescribeSolutionArchive(ctx, request)
+	if err != nil {
+		return nil, errors.Intercept(err).
+			WithDetail("failed to resolve describe solution archive request").
 			Throw()
 	}
 
